--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -14,10 +14,11 @@ body{
     padding: 100px;
 }
 .intro-right img{
-    width: 300px;
+    width: 400px;
     height: 400px;
-    border-radius: 50%;
+    border-radius: 100%;
     object-fit: cover;
+    box-shadow: 0px 0px 22px 1px #000000;
     animation: slide-left 0.5s cubic-bezier(0.250, 0.460, 0.450, 0.940) both;
 }
 .intro-left{
@@ -25,7 +26,7 @@ body{
     height: 100%;
     display: flex;
     flex-direction: column;
-    gap: 30px;
+    gap: 40px;
     margin-left: 100px;
 }
 .intro-left h1{
@@ -40,6 +41,25 @@ body{
 }
 .intro-left p span{
     color: rgb(215, 11, 11);
+}
+.fa-facebook{
+    color: rgb(4, 4, 217);
+}
+.fa-twitter{
+    color: rgb(33, 33, 206);
+}
+.fa-instagram{
+    color: rgb(229, 54, 115);
+}
+.fa-linkedin{
+    color: rgb(28, 28, 212);
+}
+.fa-github{
+    color: rgb(2, 2, 4);
+}
+.social-icons{
+    display: flex;
+    gap: 40px;
 }
 
 @keyframes slide-left {
