--- a/ResturantSite/style.css
+++ b/ResturantSite/style.css
@@ -38,3 +38,31 @@ a{
 .highlight{
     background-color: rgb(46, 144, 230) !important;
 }
+.content {
+    margin-top: 200px;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    gap: 20px;
+  }
+  
+  .content h3 {
+    background-color: rgb(2, 91, 150);
+    color: white;
+    font-size: 40px;
+    padding: 10px;
+    display: inline-block;
+  }
+  .white-link {
+    background-color: white;
+    color: rgb(2, 91, 150);
+    padding: 10px;
+    font-size: 20px;
+  }
+  .teal-link {
+    background-color: rgb(20, 129, 184);
+    color: rgb(255, 255, 255);
+    padding: 10px;
+    font-size: 20px;
+  }
